--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,20 @@
-# Prerequisites
-*.d
+# Dependencies
+/node_modules
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# Production
+/build
 
-# Linker output
-*.ilk
-*.map
-*.exp
+# Generated files
+.docusaurus
+.cache-loader
 
-# Precompiled Headers
-*.gch
-*.pch
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
